Style:fix z-index on the header

--- a/assets/src/css/style.css
+++ b/assets/src/css/style.css
@@ -87,7 +87,7 @@ body {
     translate: -50%;
     white-space: nowrap;
     /*     background-color: rgba(0, 0, 0, 0.4); */
-    z-index: 10;
+    z-index: 100;
     border-image: conic-gradient(rgba(0, 0, 0, 0.4) 0 0) fill 0/0/0 50vw;
 }
 
